# dbt-soda-ci-cd

./: README.md  configuration.yml  pyproject.toml  sample_data.csv
.github/workflows/: upload-to-gcs.yml  workflow.yml
dbt_soda_project/: .user.yml  dbt_project.yml  profiles.yml
dbt_soda_project/models/: sources.yml
dbt_soda_project/models/staging/: employees.sql
sample_data/: sample_data.csv  sample_data_def.json  sample_data_schema.json  sample_dataset.ipynb
soda/: checks.yml  configuration.yml
