[tool.poetry]
name = "dbt-soda-ci-cd"
version = "0.1.0"
description = "My first dbt-soda project"
authors = ["Bijil Subhash"]

[tool.poetry.dependencies]
python = "^3.8.5"
dbt-core = "^1.3.2"
dbt-bigquery = "^1.3"

[tool.poetry.dev-dependencies]
[build-system]
requires = ["poetry-core==1.1.8"]
build-backend = "poetry.core.masonry.api"